; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_ws2812_effects.c_ws2812_effects_set_brightness.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_ws2812_effects.c_ws2812_effects_set_brightness.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@state = common dso_local global %struct.TYPE_2__* null, align 8
@LIBRARY_NOT_INITIALIZED_ERROR_MSG = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [18 x i8] c"should be a 0-255\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @ws2812_effects_set_brightness to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ws2812_effects_set_brightness(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32 @luaL_checkint(i32* %4, i32 1)
  store i32 %5, i32* %3, align 4
  %6 = load i32*, i32** %2, align 8
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** @state, align 8
  %8 = icmp ne %struct.TYPE_2__* %7, null
  %9 = zext i1 %8 to i32
  %10 = load i8*, i8** @LIBRARY_NOT_INITIALIZED_ERROR_MSG, align 8
  %11 = call i32 @luaL_argcheck(i32* %6, i32 %9, i32 1, i8* %10)
  %12 = load i32*, i32** %2, align 8
  %13 = load i32, i32* %3, align 4
  %14 = icmp sge i32 %13, 0
  br i1 %14, label %15, label %18

15:                                               ; preds = %1
  %16 = load i32, i32* %3, align 4
  %17 = icmp slt i32 %16, 256
  br label %18

18:                                               ; preds = %15, %1
  %19 = phi i1 [ false, %1 ], [ %17, %15 ]
  %20 = zext i1 %19 to i32
  %21 = call i32 @luaL_argcheck(i32* %12, i32 %20, i32 1, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  %22 = load i32, i32* %3, align 4
  %23 = load %struct.TYPE_2__*, %struct.TYPE_2__** @state, align 8
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  store i32 %22, i32* %24, align 4
  ret i32 0
}

declare dso_local i32 @luaL_checkint(i32*, i32) #1

declare dso_local i32 @luaL_argcheck(i32*, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
